--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,72 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+      .splash-screen {
+        background-color: #1976d2;
+        background: linear-gradient(145deg, #673ab7, #673ab7);
+        color: #fff;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        animation: fade-in ease 1s forwards;
+      }
+  
+      .splash-screen img {
+        width: 100px;
+        left: calc(50% - 50px);
+        top: calc(50% - 50px);
+        position: absolute;
+        opacity: 0;
+        animation: fadeinout linear 1.5s;
+        animation-delay: 1s;
+        animation-iteration-count: infinite;
+  
+      }
+  
+  
+      /* Animations */
+  
+      @keyframes fade-in {
+        from {
+          opacity: 0;
+        }
+  
+        to {
+          opacity: 1;
+        }
+      }
+  
+      @-webkit-keyframes fadeinout {
+  
+        0%,
+        100% {
+          opacity: 0.3;
+        }
+  
+        50% {
+          opacity: 1;
+        }
+      }
+  
+      @keyframes fadeinout {
+  
+        0%,
+        100% {
+          opacity: 0.3;
+        }
+  
+        50% {
+          opacity: 1;
+        }
+      }
+    </style>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>    <div class="splash-screen">
+      <img src="assets/images/nurse.svg" />
+    </div></app-root>
 </body>
 </html>
