--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="shortcut icon" href="">
-  <meta charset="utf-8">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
+      <meta charset="utf-8">
   <title>DoctorApp</title>
   <base href="/">
 
